# rgm

./: .gitignore  .gitmodules  CMakeLists.txt  DCfiducial.C  LowEnergyReader.C  README.md  environment.csh  run_lowenergy.sh
Ana/: CMakeLists.txt  Electron_Cuts.cpp  Proton_Cuts.cpp  ana.par  clas12ana.h  ecal.par  ep_Kinematics.cpp  epp_Kinematics.cpp  example_ana.cpp  skim_events.cpp
Ana/Corrections/: Angular_Correction.cpp  Angular_Correction_Hists.cpp  CMakeLists.txt  Combined_e_pFD_Momentum_Correction_Hists.cpp  Efficiency_Resolution.cpp  Efficiency_Resolution_Comp.cpp  Energy_Loss.cpp  Energy_Loss_CD.cpp  Energy_Loss_FD.cpp  Energy_Loss_FD_copyEdit.cpp  Energy_Loss_e.cpp  Get_Radiation_Simulation.cpp  Momentum_Correction.cpp  Momentum_Correction_Deuterium.cpp  Momentum_Correction_Hists.cpp  Momentum_Correction_Hists_CD.cpp  Old_Momentum_Correction_Deuterium.cpp  Q2.cpp  Resolution.cpp  Resolution_Graph.cpp  Resolution_Hist.cpp  Vertex.cpp  Vertex_Graph.cpp
Ana/Q2_Ana/: Analysis_Note_Q2.cpp  Analysis_Note_Q2_comp.cpp  Analysis_Note_Q2_manyTheory.cpp  Andrew_skim.cpp  CMakeLists.txt  Central_Detector_Proton.cpp  Electron_Cuts.cpp  Electron_DeltaE.cpp  KMiss.cpp  KMiss_comparison_plot.cpp  Main_Figs.cpp  Makefile  Proton_Cuts.cpp  Q2_dependence.cpp  Radiation_Offset.cpp  SRC_Cuts.cpp  cmake_install.cmake  ep_Kinematics.cpp  epp_Kinematics.cpp  iso_p_LUND.cpp  many_plots.cpp  many_plots.h  p_LUND.cpp
Ana/cutFiles/: README.md  ana.par  ana_ar.par  ana_c_single.par  ana_ca40.par  ana_ca48.par  ana_cx4.par  ana_he4.par  ana_snx4.par  src_cuts.par
Ana/example_analysis/: CMakeLists.txt  README.md  example_ana.cpp  skim_events.cpp
Ana/proton_efficiency/: CMakeLists.txt  ProtonEfficiency.cpp
Ana/tensor_to_scalar/: CMakeLists.txt  skim_events.cpp  tensor_to_scalar.cpp  ts_results_errors.ipynb
Analysis/: CMakeLists.txt  CutFile.txt  backup_tensorscalar.cpp  cutfile_e.txt  cutfile_mc.txt  cutfile_mc_cd.txt  example_code.cpp  tensorscalar.cpp  tensorscalar_mc.cpp
Analysis/include/: eventcut_old.h  functions_old.h
Analysis/source/: CMakeLists.txt  eventcut.cpp
Andrew/: monitorPID.C  run.sh
Kitchen/: README.md
Kitchen/bankdefs/: bankSplit.py
Kitchen/ccdb/: beam_position_zero.txt  modify_table.sh
Kitchen/engineering_run_scripts/: create_workflow_era_v0.sh  submit_workflow_era_v0.sh  submit_workflow_era_v1.sh  submit_workflow_era_v3.sh  submit_workflow_rga_batch2_v3.sh  submit_workflow_rga_v1.sh  submit_workflow_rga_v3.sh
Kitchen/workflows/: submit_workflow_rgm_production.sh
Macros/: CLAS12Skimmer.C  CLAS12SkimmerTree.C  CLAS12SkimmerTree_MC.C  PrepareDatabases.C  createSymLink2Hipos.sh  e4nu_Monitoring.C  skimRuns.sh
MagneticFieldStudy/: CMakeLists.txt  HighEnergyReader.C  LowEnergyReader.C  LowEnergyReader.cpp  LowEnergyReader_MC.C  compile.sh
MagneticFieldStudy/submit/: submit_he.sh  submit_heone.sh  submit_le.sh  submit_mc.sh  submit_monitorOne.sh  submit_one.sh  submit_oneMC.sh  submit_recon.sh  submit_reconOne.sh
Monitoring/: CMakeLists.txt  README  README.md  compare.cpp  compare_epn.cpp  compare_epp.cpp  example_cut_file.txt  monitorPID.C  monitorPID.cpp  monitor_6GeV_D.cpp  monitor_README.txt  monitor_en.cpp  monitor_en_ML.cpp  monitor_en_copy.cpp  monitor_ep.cpp  monitor_epn.cpp  monitor_epp.cpp  neff_d_pcdn.cpp  neff_d_pcdn_old.cpp  neff_d_pfdn.cpp  neff_d_pfdn_old.cpp  neff_h_epin.cpp  neff_h_epin_old.cpp  skimmer.cpp  submit_monitorOne.sh
Monitoring/include/: eventcut.h  functions.h
Monitoring/source/: eventcut.cpp
NeutronEfficiency/: CMakeLists.txt  README.md  combine_d_pcdn_neff.c  combine_h_epin_neff.c  cutfile_d_neff_pcd.txt  cutfile_d_neff_pfd.txt  cutfile_np_nosrc.txt  neff_d_pcdn.cpp  neff_d_pfdn.cpp  neff_d_pn.cpp  neff_h_epin.cpp  submit_d_pcdn.sh  submit_d_pfdn.sh  submit_h_epin.sh
NeutronVeto/: CMakeLists.txt  D2_skim.c  D_GBT_neut.ipynb  D_cuts_recon.ipynb  D_getfeatures.cpp  D_getfeatures_ppim.cpp  N_getfeatures.cpp  README.md  TrainNeutronVeto_TMVA.C  print_goodn_plots.c  print_nsim_plots.c  print_ppipn_plots.c  submit_2gev_goodn.sh  submit_2gev_ppipn.sh  submit_6gev_goodn.sh  submit_6gev_ppipn.sh  submit_sim.sh  veto_test.cpp  veto_test_Andrew.cpp
NeutronVeto/Simulation/: README.txt  add_en_bkg.sh  add_ep_bkg.sh  ex_isotropic_CD_neutrons.sh  ex_isotropic_CD_protons.sh  generate_neutrons.C  generate_protons.C  rgm.gcard  rgm_mc.yaml  submit_GEMC_nobkg.sh  submit_analyze.sh  submit_en_bkg.py  submit_ep_bkg.py  submit_recon_bkg.sh
NeutronVeto/dataset/weights/: TMVAClassification_BDT.weights.xml  TMVAClassification_MLP.weights.xml
NeutronVeto/dataset_2gev_pCD/weights/: TrainNeutronVeto_TMVA_BDT.weights.xml  TrainNeutronVeto_TMVA_MLP.weights.xml
NeutronVeto/dataset_6gev_pCD/weights/: TrainNeutronVeto_TMVA_BDT.weights.xml  TrainNeutronVeto_TMVA_MLP.weights.xml
NeutronVeto/dataset_sim_eN_bknd/weights/: TrainNeutronVeto_TMVA_BDT.weights.xml  TrainNeutronVeto_TMVA_MLP.weights.xml
NeutronVeto/include/: veto_functions.h
NeutronVeto/source/: CMakeLists.txt
RoadMaps/: README.md  validate_roads_4gev.csh
RoadMaps/2gev/: generate_roads_2gev_fastmc.sh
RoadMaps/4gev/: generate_roads_4gev_fastmc.sh
RoadMaps/6gev/: generate_roads_6gev_fastmc.sh
Simulation/: GCF_4gev_C.sh  GCF_6gev_C.sh  GCF_to_LUND.C  GENIE_to_LUND.C  README.md  environment_gemc.csh  environment_gemc.sh  ex_GCF_6gev_C.sh  example_GCF_generator.sh  generate-genieLUNDfiles.sh  generate_neutrons.C  many_flatgen.sh  phase.txt  setup_dir.sh  submit_GCF_GEMC_RECON.sh  submit_GCF_generator.sh  submit_isotropic.C  targets.h
include/: Corrections.h  clas12ana.h  clas12debug.h
libraries/: CMakeLists.txt
libraries/clas12ana/: clas12ana.cpp
libraries/clas12debug/: clas12debug.cpp
libraries/efficiency/: efficiency.cpp  efficiency.h
libraries/neutron-veto/: veto_functions.cpp  veto_functions.h
libraries/simulation_reweighting/: eNCrossSection.cc  eNCrossSection.hh  functions.h  gcfSRC.cc  gcfSRC.hh  reweighter.cpp  reweighter.h
libraries/simulation_reweighting/universal_functions/: AV18.hh  AV18_deut.hh  AV4Pc.hh  N2LO.hh  N2LO_12.hh  N3LO.hh  NV2_1a.hh
(+162 files in other folders)
